# BeautyImguiOfUnknown

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  Main.cpp  Readme.md  程序菜单.h
app/src/main/jni/ImGui/: imgui_custom.h
app/src/main/jni/ImGui/backends/: imgui_impl_android.cpp
app/src/main/jni/ImGui/fonts/: icon.h
app/src/main/kotlin/mini/myimgui/: MainActivity.kt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
